--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>  
     <script>
-        window.location.href = "/auth/";
+        window.location.href = "/home/";
     </script>
 </body>
 </html>
