Add app to docker for mobility

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -22,10 +22,13 @@
             <ul>
                 <li id="li-logout" onclick="logout();">Выход</li>
             </ul>
-        </nav>
-       
+        </nav>       
     </header>
 
-    <span id="span-greeting">Приветствую, </span>
+    <div id="div-greeting">Приветствую, </div>
+    <div class="user-balance">
+        <div class="balance-text">У вас на счету: 0</div>
+        <a href="#" class="balance-btn">КЛИК</a>
+    </div>
 </body>
 </html>
