--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>  
     <script>
-        window.location.href = "/home/";
+        window.location.href = "/auth/";
     </script>
 </body>
 </html>
