--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/home/img/favicon.ico">
     <link rel="stylesheet" href="/auth/css/normalize.css">
     <link rel="stylesheet" href="/auth/css/auth.css">
     <script src="/auth/js/script.js"></script>
-    <title>Authorization</title>
+    <title>AM GAME | Регистрация</title>
 </head>
 <body id="loading">
     <div class="container">
-        <img id="logo" src="https://tpu.ru//upload/medialibrary/34a/6zq882c3espm1kncooywvbykp1psyqbr/gorizontalnyy-blok.png" alt="Логотип">
+        <img id="logo" src="/auth/img/gorizontalnyy-blok.png" alt="Логотип"/>
         
         <div class="input-container">
             <label for="uname">Логин:</label>
